[gd_scene load_steps=11 format=3 uid="uid://byoe3t30cf680"]

[ext_resource type="Script" uid="uid://de1od0juquemi" path="res://Arhex/Menu Principal/menu_principal.gd" id="1_1fwe4"]
[ext_resource type="Texture2D" uid="uid://jgp6j5ukld6m" path="res://Arhex/Menu Principal/Texturas/fondiu.png" id="2_hoec3"]
[ext_resource type="PackedScene" uid="uid://c0fy7cy7t6e30" path="res://Juego/nivel_1.tscn" id="2_tkvwk"]
[ext_resource type="PackedScene" uid="uid://dkpld8fl3btqh" path="res://Arhex/Controles/controles.tscn" id="3_5eowh"]
[ext_resource type="FontFile" uid="uid://6fkfu2veoax6" path="res://Arhex/arbutus/Arbutus-Regular.ttf" id="3_tkvwk"]
[ext_resource type="Texture2D" uid="uid://cgp615ppp3uf0" path="res://Arhex/Menu Principal/Texturas/boton2plus.png" id="5_qajr8"]
[ext_resource type="Texture2D" uid="uid://2s3s2tsnxkd3" path="res://Arhex/Menu Principal/Texturas/boton1plus.png" id="6_peogr"]
[ext_resource type="AudioStream" uid="uid://c2bgkc8b0a1qv" path="res://Arhex/Menu Principal/Musica_Menu.mp3" id="7_hoec3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yc16k"]
texture = ExtResource("5_qajr8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bl3ni"]
texture = ExtResource("6_peogr")

[node name="Menu Principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1fwe4")
juego = ExtResource("2_tkvwk")
controles = ExtResource("3_5eowh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hoec3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -357.0
offset_top = 29.0
offset_right = 357.0
offset_bottom = 152.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
patch_margin_bottom = 7

[node name="Label" type="Label" parent="VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkvwk")
theme_override_font_sizes/font_size = 60
text = "DonÂ´t Wake UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 300.0
offset_top = 161.0
offset_right = 852.0
offset_bottom = 621.0

[node name="NinePatchRect2" type="NinePatchRect" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 460)
layout_mode = 2
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 9
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -10.0
offset_right = -15.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Jugar" type="Button" parent="VBoxContainer2/NinePatchRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tkvwk")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_yc16k")
theme_override_styles/normal = SubResource("StyleBoxTexture_bl3ni")
text = "Jugar"

[node name="Controles" type="Button" parent="VBoxContainer2/NinePatchRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tkvwk")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_yc16k")
theme_override_styles/normal = SubResource("StyleBoxTexture_bl3ni")
text = "Controles
"

[node name="Salir" type="Button" parent="VBoxContainer2/NinePatchRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tkvwk")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_yc16k")
theme_override_styles/normal = SubResource("StyleBoxTexture_bl3ni")
text = "Salir
"

[node name="Musica_Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hoec3")
volume_db = 3.705
parameters/looping = true

[node name="Botones" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="VBoxContainer2/NinePatchRect2/VBoxContainer/Jugar" to="." method="_on_jugar_button_down"]
[connection signal="button_down" from="VBoxContainer2/NinePatchRect2/VBoxContainer/Controles" to="." method="_on_controles_button_down"]
[connection signal="button_down" from="VBoxContainer2/NinePatchRect2/VBoxContainer/Salir" to="." method="_on_salir_button_down"]
